--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
     <h1>Challenge</h1>
     <h2>Turma de Desenvolvimento de Sistemas - Escola Antônio A. Lobbe</h2>
   </div>
+
+  <br><br>
+
+  <h3 align="center">Ranking das atividades teóricas</h3>
+  <br>
   <div style="display: flex; justify-content: center;">
-    <table  border="1">
+
+    <table border="1">
       <thead>
         <tr>
-          <th>Aluno</th>
-          <th>Teórico</th>
-          <th>Prático</th>
-          <th>Grupo</th>
+          <th style="text-align: center;">Aluno</th>
+          <th style="text-align: center;">Pontos</th>
+          <th style="text-align: center;">Grupo</th>
         </tr>
       </thead>
       <tbody id="teorico">
@@ -37,15 +42,18 @@
     </table>
 
   </div>
+  <br><br>
+
+  <h3 align="center">Ranking das atividades Práticas</h3>
+  <br>
 
   <div style="display: flex; justify-content: center;">
-    <table  border="1">
+    <table border="1">
       <thead>
         <tr>
-          <th>Aluno</th>
-          <th>Teórico</th>
-          <th>Prático</th>
-          <th>Grupo</th>
+          <th style="text-align: center;">Aluno</th>
+          <th style="text-align: center;">Pontos</th>
+          <th style="text-align: center;">Grupo</th>
         </tr>
       </thead>
       <tbody id="pratico">
@@ -54,6 +62,28 @@
     </table>
 
   </div>
+
+  <br><br>
+
+  <h3 align="center">Ranking de grupos</h3>
+  <br>
+
+  <div style="display: flex; justify-content: center;">
+    <table border="1">
+      <thead>
+        <tr>
+          <th style="text-align: center;">Aluno</th>
+          <th style="text-align: center;">Participantes</th>
+          <th style="text-align: center;">Media</th>
+        </tr>
+      </thead>
+      <tbody id="rankingDeGrupos">
+        <!-- Os dados serão inseridos aqui dinamicamente -->
+      </tbody>
+    </table>
+
+  </div>
+
 
 
   <!-- Adicione o link para o Bootstrap JS e jQuery -->
