--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <tr>
           <th style="text-align: center;">Grupo</th>
           <th style="text-align: center;">Participantes</th>
-          <th style="text-align: center;">Grupos</th>
+          <th style="text-align: center;">Pontuação</th>
         </tr>
       </thead>
       <tbody id="rankingDeGrupos">
